RESOLVED FIXED304434
Dragging a selection into a pseudo element results in incorrect selection of the host element.
https://bugs.webkit.org/show_bug.cgi?id=304434
Summary Dragging a selection into a pseudo element results in incorrect selection of ...
Megan Gardner
Reported 2025-12-18 13:16:23 PST
Dragging a selection into a pseudo element results in incorrect selection of the host element.
Attachments
Megan Gardner
Comment 1 2025-12-18 13:16:24 PST
Megan Gardner
Comment 2 2025-12-18 13:29:56 PST
EWS
Comment 3 2025-12-18 18:27:26 PST
Committed 304719@main (7bfe33497d6e): <https://commits.webkit.org/304719@main> Reviewed commits have been landed. Closing PR #55649 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.